--- a/MyFreinds.html
+++ b/MyFreinds.html
@@ -29,7 +29,7 @@
 
   <h2> Picture of my pet </h2>
 
-  <img src="whippet.jpg">
+  <img src="images/whippet.jpg">
 
 
   <h2> Places i want to visit </h2>
