--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,49 @@
 </ul>
 </nav>
   <a href="https://www.facebook.com/" target="_blank">
-    <img src="facebook.jpg" width="30px"> </a>
+    <img src="images/facebook.jpg" width="30px"> </a>
 
 
   <a href="tel : 0131555666">
-    <img src="phone.jpg" width="30px"> </a>
+    <img src="images/phone.jpg" width="30px"> </a>
 
   <a href="mailto:mail@gmail.com">
-    <img src="mail.jpg" width="30px"> </a>
+    <img src="images/mail.jpg" width="30px"> </a>
 
+<form>
+ <label for="fname">First Name: </label>
+ <br>
+ <input type="text" id="fname" name="fname"><br>
+ <label for="lname">Last Name:</label><br>
+ <input type="text" id="lname" name="lname">
+ <br><br> 
+
+  <label for="gender">Gender:</label><br> 
+  <input type="radio" id="female" name="gender" value="female">
+  <label for="female">Female</label><br> 
+  <input type="radio" id="male" name="gender" value="male">
+  <label for="male">Male</label>
+  <br><br>
+
+
+  <label for="location">Location:</label><br> 
+   <select id="location" name="location">
+  <option value="Midlothian">Midlothian</option>
+  <option value="West Lothian">West Lothian</option>
+  <option value="East Lothian">East Lothian</option>
+  <option value="Edinburgh">Edinburgh</option>
+   </select>
+  <br><br> 
+
+  <label for="message">Message</label><br> 
+  <textarea id="message" name="message" rows="4" cols="50">
+  </textarea> 
+  <br><br>
+
+  <input type="submit" value="Submit">
+</form>
+
+  
 </body>
 
 
